wacc_test/sample_programs/valid/structs/basicStruct.wacc
# the most basic struct consisting of one element

# Output:

# Output:

# Program:

begin
  struct MyStruct begin
    int elem;
  end
  skip
end